<resources>
    <string name="app_name">PoC Beacons</string>

    <string name="parseAppID">gP7QbFUfyPZ4717IBkhO5obf7ftyTp8OzODcKas2</string>
    <string name="parseClientID">rPcrSNTFOZZP8eYNNCcpv7ZEVz2uFu5CYcHvGUjj</string>
    <string name="navigation_from_notification">Navigation from notification</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_beacon_list">Beacon List</string>
    <string name="lblDisplayPlaces">Display Places</string>
    <string name="lblContext">Context</string>
    <string name="lblContextBeaconRange">Range</string>
    <string name="lblContextBeaconPrimaryId">Primary Id</string>
    <string name="lblContextBeaconSecondaryId">Secondary Id</string>
    <string name="lblContextBeaconTemperature">Temperature</string>
    <string name="lblPushNotification">Push Notification</string>
    <string name="lblPushNotificationBeaconRange">Range</string>
    <string name="lblPushNotificationBeaconPrimaryId">Primary Id</string>
    <string name="lblPushNotificationBeaconSecondaryId">Secondary Id</string>
    <string name="lblPushNotificationBeaconTemperature">Temperature</string>
    <string name="title_activity_nearable_list">Nearable List</string>
    <string name="title_activity_nearable_play">Nearable Play</string>
    <string name="lbl_loading">Loading...</string>
    <string name="lbl_loading_number">000</string>
    <string name="title_activity_display_beacon_notification">Notification</string>
    <string name="title_activity_nearable_proximity">Nearable Proximity</string>
    <string name="lbl_AddToCart">Add To Cart</string>
    <string name="title_activity_nearable_play_check_in">Play Check In</string>
    <string name="title_activity_nearable_play_restaurant">Play Restaurant</string>
    <string name="lbl_CheckIn">Check In</string>
    <string name="lbl_CheckOut">Check Out</string>
    <string name="lbl_CheckInConfirmation">Confirm</string>
    <string name="lbl_Table">Table:</string>
    <string name="lbl_Customer">Customer:</string>
    <string name="lbl_Status">Status:</string>
    <string name="lbl_Beacon">Beacon:</string>
    <string name="title_activity_nearable_play_restaurant_check_in">Play Restaurant Check In
    </string>
    <string name="lbl_CheckInRequest">CheckInRequest</string>
    <string name="lbl_CheckInSucess">CheckInSucess</string>
    <string name="lbl_CheckOutRequest">CheckOutRequest</string>
    <string name="lbl_CheckOutSucess">CheckOutSucess</string>
    <string name="lbl_Wellcome">Wellcome</string>
    <string name="lbl_Bill">Bill:</string>
    <string name="color_bg_CheckInRequest">#b7fea0</string>
    <string name="color_bg_CheckOutRequest">#ffb732</string>
    <string name="color_bg_CheckInSucess">#e2e2e2</string>
    <string name="color_bg_CheckOutSucess">#e2e2e2</string>
</resources>
