<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.totvs.pcsistemas.pocbeacons.pocbeacons.NearablePlayRestaurantCheckInActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/restaurant_check_in_image"
            android:tag="restaurant_check_in_image"
            android:src="@drawable/no_image_available"
            android:layout_weight="2" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/restaurant_check_in_table_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_Table"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:tag="restaurant_check_in_table_lbl" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurant_check_in_table"
                    android:tag="restaurant_check_in_table"
                    android:textStyle="bold"
                    android:textSize="35dp"
                    android:paddingLeft="5dp"
                    android:width="125dp"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/restaurant_check_in_status_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_Status"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:tag="restaurant_check_in_status_lbl"/>
                <TextView
                    android:id="@+id/restaurant_check_in_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_loading"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:tag="restaurant_check_in_status"
                    android:paddingLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/restaurant_check_in_customerName_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_Customer"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:tag="restaurant_check_in_customerName_lbl"/>
                <TextView
                    android:id="@+id/restaurant_check_in_customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_loading"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:tag="restaurant_check_in_customerName"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/restaurant_check_in_beaconIdentifier_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_Beacon"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:tag="restaurant_check_in_beaconIdentifier_lbl"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/restaurant_check_in_beaconIdentifier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_loading"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:tag="restaurant_check_in_beaconIdentifier"
                    android:visibility="invisible"
                    android:paddingLeft="5dp" />
                <TextView
                    android:id="@+id/restaurant_check_in_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_loading"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:tag="restaurant_check_in_transaction"
                    android:visibility="invisible"
                    android:paddingLeft="5dp" />
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_CheckIn"
                android:id="@+id/btnCheckInConfirmation"
                android:tag="restaurant_check_in_check_confirmation"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
